# pr-newswire-app

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: main.yml
api/: main.py
api/articles/: endpoints.py  serializers.py
api/tests/: test_articles_endpoints.py
crawler/: __init__.py  article.py  browser.py  main.py  parser.py
crawler/tests/: test_browser.py  test_parser.py
crawler/tests/data/: sample_001.html  sample_002.html  sitemap1.xml  sitemap2.xml  sitemap_articles.xml  sitemap_articles_with_empty_loc.xml  sitemap_index.xml  sitemap_index_with_empty_loc.xml
dockerfiles/: Dockerfile.frontend
models/: article.py
models/tests/: factories.py  test_article.py
storage/: __init__.py  mongo.py
storage/tests/: factories.py  test_mongo.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx
web/src/components/: ArticleCard.jsx  ArticleList.jsx  Filters.jsx  Header.jsx  NoArticles.jsx  Spinner.jsx
web/src/pages/: HomePage.jsx
