[project]
name = "wire-scout"
version = "0.1.0"
description = "API for PR Newswire content"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
]

[dependency-groups]
crawler = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
]
storage = [
    "pymongo>=4.8.0",
]
test = [
    "factory-boy>=3.3.3",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-random-order>=1.1.1",
    "pytest-sugar>=1.0.0",
    "responses>=0.25.7",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["RUF", "I", "PL", "F", "COM", "UP", "T10", "T20", "DTZ", "SIM", "TID", "PTH", "ERA", "TRY"]
ignore = ["COM812","COM819", "PLR2004", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "TRY003", "RUF012"]


[tool.pytest.ini_options]
addopts = "--random-order --cov"
python_files = ["test_*.py"]


[tool.coverage.run]
branch = true
source = ["."]
